[gd_scene load_steps=5 format=3 uid="uid://d7nwbidoa28l"]

[ext_resource type="Script" uid="uid://bnara8oge54s5" path="res://scripts/fighter.gd" id="1_a4q2m"]
[ext_resource type="Texture2D" uid="uid://dhp4ijkds4wlg" path="res://art/ui/bar/hp_under.png" id="2_rsphg"]
[ext_resource type="Texture2D" uid="uid://df5he8su6yxak" path="res://art/ui/bar/hp_over.png" id="3_tlqsq"]
[ext_resource type="Texture2D" uid="uid://cbmr8dus2gpjq" path="res://art/ui/bar/hp_progress_player.png" id="4_eelhu"]

[node name="Fighter" type="CharacterBody2D"]
script = ExtResource("1_a4q2m")
ftl_delay = 0.15
ftl_catchup_time = 0.35

[node name="Visual" type="AnimatedSprite2D" parent="."]

[node name="BodyCollision" type="CollisionShape2D" parent="."]

[node name="HealthBarGhost" type="TextureProgressBar" parent="."]
z_index = 100
offset_left = -16.0
offset_top = -30.0
offset_right = 16.0
offset_bottom = -24.0
step = 0.1
value = 100.0
texture_under = ExtResource("2_rsphg")
texture_over = ExtResource("3_tlqsq")
texture_progress = ExtResource("4_eelhu")

[node name="HealthBar" type="TextureProgressBar" parent="."]
z_index = 100
offset_left = -16.0
offset_top = -30.0
offset_right = 16.0
offset_bottom = -24.0
step = 0.1
value = 100.0
texture_under = ExtResource("2_rsphg")
texture_over = ExtResource("3_tlqsq")
texture_progress = ExtResource("4_eelhu")
